# Shermes

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-commands.txt  docker-compose.yml  main.py  neo4j.sh  neo4j_desktop.sh  pyproject.toml  useful_links.txt
.github/workflows/: ci.yml
db_setup/: README.md
dev_setup/: README.md
src/database/: neo4j_client.py
src/models/: board_edge.py  board_node.py  case.py  folder.py
src/repositories/: board_repository.py  case_repository.py  folder_repository.py
src/styles/themes/: dark.qss  light.qss
src/ui/: main_window.py
src/ui/graphic_items/: edge.py  node.py
src/ui/views/: board_view.py  cases_browser_view.py  timeline_view.py
src/utils/: utils.py
